views/assets/src/helpers/less/customization/pm-overview.less
/* ... */
.pm-page-wrapper .pm-header .pm-form-has-addon .pm-form-control{
	min-width: 280px;
}
.my-task-filter-with-header select, .my-task-filter-wrap .form .project-dropdown-wrap .multiselect__tags, .my-task-filter-with-header input[type='text'] {
    border: 1px solid #ddd!important;
    padding-right: 22px!important;
    width: 185px;
    background: #fff url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20width%3D%2220%22%20height%3D%2220%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M5%206l5%205%205-5%202%201-7%207-7-7%202-1z%22%20fill%3D%22%23555%22%2F%3E%3C%2Fsvg%3E') no-repeat right 10px top 55%;
}
.my-task-filter-wrap .form .project-dropdown-wrap .multiselect__tags, .my-task-filter-with-header input[type='text']{
	background: #fff;
}
.my-task-filter-wrap .form .project-dropdown-wrap{
	width: 185px;
}
#wedevs-project-manager .my-task-filter-with-header {
    padding-bottom: 9px;
}

#wedevs-project-manager .pm-my-tasks .pm-project-header.pm-project-head ul li a {
    padding: 22px 0px!important;
}
#wedevs-project-manager .pm-my-tasks .pm-project-header.pm-project-head ul li{
	margin-top: 0;
}
div#pm-calender-page {
    margin-top: 0;
}

#wedevs-project-manager .pm-common-header h2 {
    padding: 0;
}

.pm-calender-page .project-select-area {
    padding: 0;
}
#wedevs-project-manager #pm-calender-page .pm-common-header {
    display: block;
	padding-bottom: 13px;
}

#wedevs-project-manager #pm-calender-page .pm-common-header h2 {
    font-size: 20px;
    font-weight: 600;
    padding-bottom: 10px;
}
div#pm-calender-page .project-select-area .form-content-wrap .drop-down-wrap .projects-drop-down .multiselect__tags {
    height: 42px;
    border-radius: var(--pm-input-radius);
    padding: 9px;
}
div#pm-calender-page .project-select-area .form-content-wrap .drop-down-wrap .users-drop-down .multiselect__tags{
	height: 42px;
	border-radius: var(--pm-input-radius);
    padding: 9px;
	overflow: hidden;
}

div#pm-calender-page .project-select-area .form-content-wrap .drop-down-wrap {
    align-items: center;
}

div#pm-calender-page .pm-common-header .button-secondary {
    height: 42px;
}

div#pm-calender-page .project-select-area .form-content-wrap {
    align-items: center;
}
.pm-wrap.pm-front-end.pm-report-wrapper {
    margin-top: 0;
}

.pm-wrap.pm-front-end.pm-report-wrapper .pm-common-header {
    border-radius: 0!important;
}

#wedevs-project-manager .pm-wrap.pm-front-end.pm-report-wrapper .pm-common-header {
    padding-bottom: 20px!important;
    border-radius: 0 0 var(--pm-block-radius) var(--pm-block-radius) !important;
}
.pm-files.pm-files-container-pro .pm-pro-file-container .folders-list-container{
	border-radius: 10px;
	padding: 30px;
}
.pm-doc-modal .modal-body{
	margin:0;
	padding: 20px 0!important;
}
.project-edit-form .new-pm-header h2 {
    margin-top: 0;
}

.pm-header-title-content .project-edit-form .submit {
    padding-bottom: 0;
    margin-bottom: 0;
}
.pm-discussion.pm-discussion-container .pm-blank-template.discussion {
    padding: 0;
    border: none;
    background: no-repeat;
    box-shadow: none;
}
.pm-discussion.pm-discussion-container, .pm-discussion.pm-discussion-container .pm-new-message-form {
    border-radius: 10px;
}

.pm-discussion.pm-discussion-container .pm-blank-template.discussion .submit {
    padding-bottom: 0;
    margin-bottom: 0;
}
#wedevs-project-manager .discuss-notifier .notify-users .pm-multiselect-top {
    right: auto;
    left: 0;
    top: 35px;
    border: none;
}

#wedevs-project-manager .discuss-notifier .notify-users .pm-multiselect-top::before {
    left: 10px;
    right: auto;
    border-color: transparent;
}

#wedevs-project-manager .discuss-notifier .notify-users .pm-multiselect-top::after {
    left: 10px;
    right: auto;
}
.vue-daterange-picker .dropdown-menu .yearselect {
    height: 38px;
}

#wedevs-project-manager select.monthselect.col {
    height: 38px!important;
}

#wedevs-project-manager.pm-page-wrapper .pm-my-tasks .mytask-activity .pm-activity-list .pm-activity-body li div {
    margin-left: 15px;
}

#wedevs-project-manager.pm-page-wrapper .pm-my-tasks .mytask-activity .pm-activity-list .pm-activity-body li div span:first-of-type {
    margin-left: -10px !important;
}

#wedevs-project-manager #pm-progress-wrap .pm-activity a.pm-progress-label {
	margin-left: -15px;
}

.pm-todo-item .todo-content .task-action-wrap .task-comment-total span {
	min-width: 0px !important;
}

.pm-messege-wrapper .dicussion-meta .comment-count i::before {
	margin-left: 0px;
}

.pm-milestone-container .bb-icon-flag:before {
	margin-left: 0px !important;
}

.pm-page-wrapper .pm-filter-selection select {
	background:  var(--pm-secondary-button-background-regular) !important;
  }

// #wedevs-project-manager #pm-single-task-wrap .pm-task-comment-wrap .pm-comment-content {
// 	margin-left: 44px !important;
// }

#wedevs-project-manager #pm-single-task-wrap {
	.popup-container .popup-body {
		height: 100% !important;
		padding-bottom: 0px !important;
		.task-title-text span {
			font-size: 24px !important;
		}
		.pm-task-comment-wrap .comment-content {
			.pm-comment-content {
				margin-bottom: 15px;
				div p{
					margin-top: 0px !important;
					margin-bottom: 0px !important;
				}
				ul.pm-attachments li {
					margin-top: 0px !important;
				}
			}
		}
	}
	.popup-mask {
		background-color: unset !important;
		z-index: 99999 !important;
		.popup-container .popup-body {
			border-left: 1px solid lightgray !important;
		}
	}
}

@media only screen and (min-width: 768px) {
	.project-list-view article .pm-project-item-header {
		flex-basis: 30% !important;
		max-width: 30% !important;
	}
}

@media only screen and (min-width: 768px) {
	.project-list-view article .pm-project-item-body {
		flex-basis: calc(70% - 50px) !important;
		max-width: calc(70% - 50px) !important;
	}
}

